# POC

./: .gitignore  .gitmodules  README.md  source-me.sh
docs/: index.html
hardware/kicad/lib/: JLC.kicad_sym
hardware/kicad/lib/mg90s.pretty/: mg90s_left.kicad_mod  mg90s_right.kicad_mod
hardware/kicad/lib/step/mg90s-servo-2.snapshot.1/: MG90S Servo-All.step  MG90S Servo-Wing.step  MG90S Servo.step
hardware/kicad/main/: fp-lib-table  main.kicad_pcb  main.kicad_pro  main.kicad_sch  sym-lib-table
hardware/kicad/main/main/: #auto_saved_files#  _autosave-main.kicad_pcb  _autosave-main.kicad_sch  fp-info-cache  fp-lib-table  main.kicad_pcb  main.kicad_prl  main.kicad_pro  main.kicad_sch  sym-lib-table
hardware/kicad/main/production/: netlist.ipc
hardware/mechanics/printed parts/: chassis_both.stl  chassis_right.stl  wheel_v1.step
src/kabot_app/: .gitignore  CMakeLists.txt  package.xml
src/kabot_app/src/: main.cpp  main.qml  main.qrc  utils.h
src/kabot_app/src/qml/: qml.qrc
src/kabot_app/src/qml/RQml/Control/: RButton.qml  RKeyButton.qml  RVelocityController.qml  RVelocityControllerWithCameraImage.qml  RVelocityDisplay.qml  qmldir
src/kabot_app/src/qml/RQml/Display/: MeshViewer.qml  RBattery.qml  RCameraImage.qml  RChart.qml  RLogger.qml  RRosMessagesList.qml  RTopicManager.qml  qmldir
src/kabot_app/src/qml/RQml/Layout/: FrameWithTitle.qml  LayoutItem.qml  MainScreenFooter.qml  MainScreenHeader.qml  MainScreenLayout.qml  SubscreenButton.qml  SubscreenLayout.qml  qmldir
src/kabot_app/src/qml/RQml/Screens/: ControlerScreen.qml  HomeScreen.qml  ManualControlScreen.qml  SensorsScreen.qml  SettingsScreen.qml  qmldir
src/kabot_app/src/qml/RQml/Screens/ManualControlSubscreens/: VelocityControllerSubscreen.qml  VelocityControllerWithCameraImageSubscreen.qml
src/kabot_app/src/qml/RQml/Screens/SettingsScreenSubscreens/: ApplicationSettingsSubscreen.qml  RosTopicsManagerSubscreen.qml
src/kabot_app/src/qml/RQml/Utils/: AppLogo.qml  CenteredLabel.qml  RItem.qml  Style.qml  qmldir
src/kabot_app/src/ros2/: RosController.cpp  RosController.h  RosMessagesMirror.cpp  RosMessagesMirror.h  RosNode.h
src/kabot_app/src/ros2/msg_parsers/: BuiltinInterfacesParsers.h  GeometryMsgsParsers.h  NavMsgsParsers.h  ParserUtils.h  RclInterfacesParsers.h  SensorMsgsParsers.h  StdMsgsParsers.h  TrajectoryMsgsParsers.h
src/kabot_app/src/ros2/topic_handlers/: AllTopicHandlers.h  IRosTopicHandlerReceive.cpp  IRosTopicHandlerReceive.h  IRosTopicHandlerSend.h  RosTopicHandler.h  RosTopicHandlersManager.cpp  RosTopicHandlersManager.h
src/kabot_app/src/ros2/topic_handlers/builtin_interfaces/: DurationHandler.h  TimeHandler.h
src/kabot_app/src/ros2/topic_handlers/geometry_msgs/: PointHandler.h  PoseHandler.h  PoseWithCovarianceHandler.h  QuaternionHandler.h  TwistHandler.h  TwistWithCovarianceHandler.h  Vector3Handler.h
src/kabot_app/src/ros2/topic_handlers/nav_msgs/: OdometryHandler.h
src/kabot_app/src/ros2/topic_handlers/rcl_interfaces/: LogHandler.h
src/kabot_app/src/ros2/topic_handlers/sensor_msgs/: ImageHandler.h  ImuHandler.h  LaserScanHandler.h
src/kabot_app/src/ros2/topic_handlers/std_msgs/: BoolHandler.h  ByteHandler.h  CharHandler.h  ColorRGBAHandler.h  Float64MultiArrayHandler.h  HeaderHandler.h
src/kabot_app/src/ros2/topic_handlers/trajectory_msgs/: JointTrajectory.h
src/kabot_launcher/: package.xml  setup.cfg  setup.py
src/kabot_launcher/config/: camera_info.yaml  camera_params.yaml  rviz.rviz
src/kabot_launcher/description/models/: aruco.dae
src/kabot_launcher/description/urdf/: chassis.xacro  gazebo_camera.urdf.xacro  gazebo_control.xacro  inertial_macros.xacro  kabot.urdf.xacro  materials.xacro  wheel.xacro
src/kabot_launcher/launch/: aruco_camera.launch.py  foxglove.launch.py  gazebo.launch.py  kabot.launch.py  kabot_core.launch.py  robot.launch.py  rviz.launch.py
src/kabot_platformio/: platformio.ini
src/kabot_platformio/include/: KabotServo.h  secrets.h
src/kabot_platformio/src/: main.cpp
