<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kabot_launcher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jakubkolasa99@gmail.com">jk</maintainer>
  <license>TODO: License declaration</license>

	<depend>usb_cam</depend>
	<depend>camera-calibration-parsers</depend>
	<depend>camera-info-manager</depend>
	<depend>launch-testing-ament-cmake</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/../models"/>
  </export>
</package>
